--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <h1>Weekly Riddle</h1>
-    <div id="riddle-container">
+    <div id="riddle-card" class="card">
         <img id="riddle-image" src="" alt="Riddle Image">
         <p id="riddle-text">Come back next week for the next riddle!</p>
     </div>
