--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
     <h1>Weekly Riddle</h1>
     <div id="riddle-card" class="card">
-        <img id="riddle-image" src="" alt="Riddle Image">
+        <img id="riddle-image" src="" alt="Riddle Image" onclick="getNextRiddle()">
         <p id="riddle-text">Come back next week for the next riddle!</p>
     </div>
 </div>
