--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="container">
+<div class="container" onclick="getNextRiddle()">
     <h1>Weekly Riddle</h1>
     <div id="riddle-card" class="card">
-        <img id="riddle-image" src="" alt="Riddle Image" onclick="getNextRiddle()">
+        <img id="riddle-image" src="" alt="Riddle Image">
         <p id="riddle-text">Come back next week for the next riddle!</p>
     </div>
 </div>
