--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container" onclick="getNextRiddle()">
-    <h1>Weekly Riddle</h1>
+    <h1>חידת השבוע!</h1>
     <div id="riddle-card" class="card">
         <img id="riddle-image" src="" alt="Riddle Image">
         <p id="riddle-text">Come back next week for the next riddle!</p>
