--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="container" onclick="getNextRiddle()">
+<div class="container">
     <h1>חידת השבוע!</h1>
     <div id="riddle-card" class="card">
         <img id="riddle-image" src="" alt="Riddle Image">
