--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Riddle Reveal</title>
+    <title>חידת מסע</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alef&family=Assistant&family=David+Libre&family=Frank+Ruhl+Libre&family=Heebo&family=Rubik&family=Varela+Round&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
-    <h1>חידת השבוע!</h1>
+    <h1 dir="rtl">חידת מסע!</h1>
     <div id="riddle-card" class="card">
         <img id="riddle-image" src="" alt="Riddle Image">
-        <p id="riddle-text">Come back next week for the next riddle!</p>
+        <p id="riddle-text" dir="rtl">Come back next week for the next riddle!</p>
+        <p dir="rtl">חידה נוספת בימים הקרובים...</p>
     </div>
 </div>
 <script src="scripts.js"></script>
