--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <div class="container">
     <h1 dir="rtl">חידת מסע!</h1>
     <div id="riddle-card" class="card">
-        <img id="riddle-image" src="" alt="Riddle Image">
+        <div class="media-container">
+        </div>
         <p id="riddle-text" dir="rtl">Come back next week for the next riddle!</p>
         <p dir="rtl">חידה נוספת בימים הקרובים...</p>
     </div>
